# job-harbor

./: .env.example  .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: scrape.yml
docs/: CONFIGURATION.md  PLAN.md  scrape.private-template.yml
src/job_harbor/: __init__.py  db.py  main.py  model.py
src/job_harbor/matcher/: __init__.py  keyword.py  llm.py
src/job_harbor/profile/: __init__.py  loader.py
src/job_harbor/scrapers/: __init__.py  base.py  getonboard.py  google_jobs.py  himalayas.py  jooble.py  linkedin.py  remoteok.py  remotive.py  vacantes_digitales.py
