[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "job-harbor"
version = "0.1.0"
description = "Job matcher that finds the best opportunities for your profile"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.13",
    "pyyaml>=6.0",
    "google-genai>=1.14",
    "rich>=13.9",
]

[project.scripts]
job-harbor = "job_harbor.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
